Fixed problem with overflow-x in PersonPage.  Changed background color to onyx

--- a/styles/components/_PersonPage.scss
+++ b/styles/components/_PersonPage.scss
@@ -2,7 +2,7 @@
   padding: 2rem;
   width: 100%;
   height: 100%;
-  background: #000133;
+  background: #0F0F0F;
   overflow-y: scroll;
   max-height: 100vh;
 
@@ -43,6 +43,7 @@
   &__shows {
     display: flex;
     overflow-x: scroll;
+    position: relative;
   }
 }
 
