--- a/styles/components/_dashboard.scss
+++ b/styles/components/_dashboard.scss
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: row;
     border-radius: 2rem;
-    background: black;
+    background: #0f0f0f;
   }
 
   &__content {
